menu select created

--- a/WebContent/jstest.html
+++ b/WebContent/jstest.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html>
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -9,5 +9,9 @@
 
 <canvas id="canvas" width="640" height="480"></canvas><br />
 <button onclick="test()">test</button>
+<button onclick="select(1)">1</button>
+<button onclick="select(2)">2</button>
+<button onclick="select(3)">3</button>
+<button onclick="select(4)">4</button>
 </body>
 </html>
